--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="light_grey">#F2F2F2F2</color>
+    <color name="grey_black">#262627</color>
     <color name="teal">#0DCDAA</color>
 </resources>
